# AnniAudio

./: .gitignore  .gitmodules  AnniAudio.code-workspace  AnniAudioCable.sln  CMakeLists.txt  README.md
certs/: README.md
cli/: anniaudio.ps1
config/: cables.json.example
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MULTI_CABLE.md  RESEARCH.md  ROADMAP.md
driver/: AnniAudioCable.inf  AnniAudioCable.inf.in  AnniAudioCable.vcxproj  adapter.cpp  common.h  mintopo.cpp  mintopo.h  minwavert.cpp  minwavert.h  minwavertstream.cpp  minwavertstream.h  stdunk.cpp  toptable.h
scripts/: build-driver.ps1  dev-mode.ps1  diagnose-audio.ps1  gaming-mode.ps1  generate-inf.ps1  install-driver.ps1  toggle-device.ps1  uninstall-driver.ps1
scripts/lib/: config.ps1
src/core/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt  poc_wasapi.cpp  route_cli.cpp  test_routing.cpp
src/dsp/: poc_eq.cpp
src/noise/: poc_rnnoise.cpp
